# algorithms

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  main
FirstLetterToAppearTwice/: README.md  main.c  repeated.h
TwoSum/: Makefile  main.c  twosum.c  twosum.h
docs/: alignment.md  articulation-points.md  ascii-rules.md  backtracking.md  bellman-ford.md  bfs.md  binary-lifting.md  binary-search.md  bitmask-dp.md  bitmask.md  boyer-moore.md  bridges.md  bst-invariants.md  centroid-decomposition.md  cuckoo.md  dfs.md  digit-dp.md  dijkstra.md  dp-1d.md  dp-2d.md  edit-distance.md  endianness.md  euler-tour.md  false-sharing.md  fenwick-tree.md  floyd-warshall.md  graph-dp.md  hash-collision.md  hashing.md  heap-vs-sort.md  heavy-light.md  in-place-rules.md  interval-dp.md  interval-tree.md  intervals-greedy.md  intervals-merge.md  iterative-traversals.md  kadane.md  kd-tree.md  kmp.md  (+44 more)
notes/: alignment.md  articulation-points.md  ascii-rules.md  backtracking.md  bellman-ford.md  bfs.md  binary-lifting.md  binary-search.md  bitmask-dp.md  bitmask.md  boyer-moore.md  bridges.md  bst-invariants.md  centroid-decomposition.md  cuckoo.md  dfs.md  digit-dp.md  dijkstra.md  dp-1d.md  dp-2d.md  edit-distance.md  endianness.md  euler-tour.md  false-sharing.md  fenwick-tree.md  floyd-warshall.md  graph-dp.md  hash-collision.md  hashing.md  heap-vs-sort.md  heavy-light.md  in-place-rules.md  interval-dp.md  interval-tree.md  intervals-greedy.md  intervals-merge.md  iterative-traversals.md  kadane.md  kd-tree.md  kmp.md  (+44 more)
scripts/: check-trailing-ws.sh  ci-local.sh  count-loc.sh  count-tests.sh  find-todos.sh  fmt-c.sh  lint.sh  list-headers.sh  list-problems.sh  rebuild-debug.sh  rebuild-release.sh  rebuild.sh  run-tests.sh  show-tree.sh  stats.sh  verify-suite.sh  watch-build.sh
src/AVLTree/: README.md  avl_tree.c  avl_tree.h  main.c
src/AddBinary/: add_binary.c  add_binary.h  main.c
src/AddDigits/: README.md  add_digits.c  add_digits.h  main.c
src/AddStrings/: add_strings.c  add_strings.h  main.c
src/AoC2024_1/: main.c  tree_sort.c  tree_sort.h
src/AoC2024_3/: logger.c  logger.h  main.c  parser.c  parser.h  program.c  program.h  scanner.c  scanner.h
src/Aoc2024_2/: int_hash_map.c  int_hash_map.h  level.c  level.h  main.c  report.c  report.h
src/Aoc2024_4/: 4x4.txt  gameboard.c  gameboard.h  logger.c  main.c
src/Aoc2024_5/: logger.c  main.c  rule_check.c  rule_check.h
src/BestTimeToBuyStock/: README.md  best_time_to_buy.c  best_time_to_buy.h  main.c
src/BinaryGap/: README.md  binary_gap.c  binary_gap.h  main.c
src/BinaryTreeInorder/: README.md  inorder.c  inorder.h  main.c
src/BinaryTreePostorder/: README.md  main.c  postorder.c  postorder.h
src/BinaryTreePreorder/: README.md  main.c  preorder.c  preorder.h
src/BloomFilter/: README.md  bloom_filter.c  bloom_filter.h  main.c
src/BurstBalloons/: README.md  burst_balloons.c  burst_balloons.h  main.c
src/ClimbStairs/: climb_stairs.c  climb_stairs.h  main.c
src/CoinChange/: README.md  coin_change.c  coin_change.h  main.c
src/CombinationSum/: README.md  combination_sum.c  combination_sum.h  main.c
src/CompareVersion/: compare_version.c  compare_version.h  main.c
src/ContainerWithMostWater/: README.md  main.c  most_water.c  most_water.h
src/ContainsDuplicate/: contains_duplicate.c  contains_duplicate.h  main.c
src/ConvertToBase7/: README.md  convert_to_base7.c  convert_to_base7.h  main.c
src/CountAndSay/: count_and_say.c  count_and_say.h  main.c
src/CountBits/: README.md  count_bits.c  count_bits.h  main.c
src/CountPrimes/: count_primes.c  count_primes.h  main.c
src/CountTrailingZeros/: README.md  main.c  trailing_zeros.c  trailing_zeros.h
src/DailyTemperatures/: README.md  daily_temperatures.c  daily_temperatures.h  main.c
src/DirectedAcyclicCurve/: README.md  bench_corpus.cpp  bench_persist.cpp  curve_bezier.cpp  curve_bezier.hpp  curve_codec.cpp  curve_codec.hpp  curve_locator.cpp  curve_locator.hpp  curve_pick_optimizer.cpp  curve_pick_optimizer.hpp  main.cpp  y_builder.cpp  y_builder.hpp
src/DoublyLinkedList/: README.md  dll.c  dll.h  main.c
src/EditDistance/: README.md  edit_distance.c  edit_distance.h  main.c
src/EvalReversePolish/: README.md  eval_rpn.c  eval_rpn.h  main.c
src/ExcelColumnNumber/: excel_column_number.c  excel_column_number.h  main.c
src/ExcelColumnTitle/: excel_column_title.c  excel_column_title.h  main.c
src/FindDifference/: README.md  find_difference.c  find_difference.h  main.c
src/FirstLetterToAppearTwice/: README.md  repeated.c
src/FirstUniqueChar/: first_unique_char.c  first_unique_char.h  main.c
src/FizzBuzz/: fizz_buzz.c  fizz_buzz.h  main.c
src/FloodFill/: README.md  flood_fill.c  flood_fill.h  main.c
src/FourSum/: README.md  four_sum.c  four_sum.h  main.c
src/GenerateParens/: README.md  generate_parens.c  generate_parens.h  main.c
src/GroupAnagrams/: README.md  group_anagrams.c  group_anagrams.h  main.c
src/HammingDistance/: hamming_distance.c  hamming_distance.h  main.c
src/HappyNumber/: happy_number.c  happy_number.h  main.c
src/HouseRobber/: README.md  house_robber.c  house_robber.h  main.c
src/ImplementQueueWithStacks/: README.md  main.c  queue_two_stacks.c  queue_two_stacks.h
src/ImplementStackWithQueues/: README.md  main.c  stack_one_queue.c  stack_one_queue.h
src/InfixToPostfix/: README.md  infix_to_postfix.c  infix_to_postfix.h  main.c
src/IntToRoman/: int_to_roman.c  int_to_roman.h  main.c
src/InvertBinaryTree/: README.md  invert_tree.c  invert_tree.h  main.c
src/IsPalindromeIgnoreCase/: README.md  main.c  palindrome_case.c  palindrome_case.h
src/IsSubsequence/: is_subsequence.c  is_subsequence.h  main.c
src/JumpGame/: README.md  jump_game.c  jump_game.h  main.c
src/JumpGameII/: README.md  jump_game_ii.c  jump_game_ii.h  main.c
src/KthLargestNumber/: README.md  kth_largest.c  kth_largest.h  main.c
src/LRUCache/: README.md  lru_cache.c  lru_cache.h  main.c
src/LengthOfLastWord/: length_of_last_word.c  main.c  (+1 more)
tests/: main.c  tests.h
twosum/: twosum.c
typescript/: README.md
(+404 files in other folders)
